@@ -25,7 +25,7 @@
 	      <accelerator key="X" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image171">
+		<widget class="GtkImage" id="image181">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-cut</property>
 		  <property name="icon_size">1</property>
@@ -48,7 +48,7 @@
 	      <accelerator key="C" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image172">
+		<widget class="GtkImage" id="image182">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-copy</property>
 		  <property name="icon_size">1</property>
@@ -71,7 +71,7 @@
 	      <accelerator key="V" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image173">
+		<widget class="GtkImage" id="image183">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-paste</property>
 		  <property name="icon_size">1</property>
@@ -110,7 +110,7 @@
 	      <accelerator key="Delete" modifiers="0" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image174">
+		<widget class="GtkImage" id="image184">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-delete</property>
 		  <property name="icon_size">1</property>
@@ -173,7 +173,7 @@
 	      <signal name="activate" handler="rbm_move_to_parent_dir1_activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image175">
+		<widget class="GtkImage" id="image185">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-goto-top</property>
 		  <property name="icon_size">1</property>
@@ -195,7 +195,7 @@
 	      <signal name="activate" handler="rbm_set_as_working_dir1_activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image176">
+		<widget class="GtkImage" id="image186">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-save</property>
 		  <property name="icon_size">1</property>
@@ -274,16 +274,6 @@
 	      <property name="use_underline">True</property>
 	      <property name="active">False</property>
 	      <signal name="activate" handler="rbm_confirm_delete_activate" last_modification_time="Wed, 22 Jun 2005 08:52:46 GMT"/>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkCheckMenuItem" id="recv_as_group1">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">_Receive as group</property>
-	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
-	      <signal name="activate" handler="rbm_recv_as_group1_activate" last_modification_time="Wed, 22 Jun 2005 08:52:46 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
