@@ -20,7 +20,7 @@
   <child>
     <widget class="GtkMenuItem" id="options1">
       <property name="visible">True</property>
-      <property name="label" translatable="yes">_Options</property>
+      <property name="label" translatable="yes">_Main Options</property>
       <property name="use_underline">True</property>
       <signal name="activate" handler="rbm_options1_activate" last_modification_time="Wed, 29 Jun 2005 09:00:10 GMT"/>
       <accelerator key="O" modifiers="GDK_CONTROL_MASK" signal="activate"/>
@@ -50,12 +50,35 @@
   </child>
 
   <child>
-    <widget class="GtkCheckMenuItem" id="recv_as_group1">
+    <widget class="GtkMenuItem" id="options2">
       <property name="visible">True</property>
-      <property name="label" translatable="yes">Recv as _group</property>
+      <property name="label" translatable="yes">_Options</property>
       <property name="use_underline">True</property>
-      <property name="active">True</property>
-      <signal name="activate" handler="rbm_recv_as_group1_activate" last_modification_time="Sun, 26 Jun 2005 13:01:51 GMT"/>
+
+      <child>
+	<widget class="GtkMenu" id="options2_menu">
+
+	  <child>
+	    <widget class="GtkCheckMenuItem" id="recv_as_group1">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Recv as _group</property>
+	      <property name="use_underline">True</property>
+	      <property name="active">True</property>
+	      <signal name="activate" handler="rbm_recv_as_group1_activate" last_modification_time="Sun, 26 Jun 2005 13:01:51 GMT"/>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkCheckMenuItem" id="backup_as_tigroup1">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Backup as TiGroup</property>
+	      <property name="use_underline">True</property>
+	      <property name="active">True</property>
+	      <signal name="activate" handler="rbm_backup_as_tigroup1_activate" last_modification_time="Mon, 17 Sep 2007 19:34:54 GMT"/>
+	    </widget>
+	  </child>
+	</widget>
+      </child>
     </widget>
   </child>
 
