@@ -5,8 +5,10 @@
  */
 
 gchar *s = N_("Change _device");
-gchar *s = N_("_Options");
+gchar *s = N_("_Main Options");
 gchar *s = N_("_Local view");
+gchar *s = N_("_Options");
 gchar *s = N_("Recv as _group");
+gchar *s = N_("Backup as TiGroup");
 gchar *s = N_("_Delete var/app");
 gchar *s = N_("Create _folder");
