@@ -329,7 +329,7 @@
 		    <widget class="GtkRadioButton" id="radiobutton31">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">backup</property>
+		      <property name="label" translatable="yes">Backup</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
